# ion-engine-test

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ion.code-workspace
include/: Core.hpp  EventBus.hpp  Logger.hpp  ResourceManager.hpp  SubSystem.hpp  WindowManager.hpp  core.hpp  game.hpp  hash.hpp  ion.hpp  logger.hpp  pch.hpp
include/js/: Env.hpp  Scope.hpp  Script.hpp  ScriptManager.hpp
src/: Core.cpp  ResourceManager.cpp  WindowManager.cpp  core.cpp  game.cpp  ion.cpp  logger.cpp  main.cpp
src/js/: Env.cpp  Scope.cpp  Script.cpp  ScriptManager.cpp
test-game/include/: TestGame.hpp
test-game/src/: TestGame.cpp  main.cpp
